--- a/app/public/index.html
+++ b/app/public/index.html
@@ -24,20 +24,20 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Renaissance Shade | NFT Drop</title>
-    <meta name="title" content="NFT Drop" />
+    <meta name="title" content="Renaissance Shade NFT Drop" />
     <meta name="description" content="Mint a limited NFT drop on Solana." />
     
     <!-- Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://solnft.13z.dev/">
-    <meta property="og:title" content="NFT Drop">
+    <meta property="og:title" content="Renaissance Shade NFT Drop">
     <meta property="og:description" content="Mint a limited NFT drop on Solana.">
 
     
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://solnft.13z.dev">
-    <meta property="twitter:title" content="NFT Drop">
+    <meta property="twitter:title" content="Renaissance Shade NFT Drop">
     <meta property="twitter:description" content="Mint a limited NFT drop on Solana.">
     </head>
   </head>
